--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "party_count": 6,
+  "party_count": 10,
   "compute_parties": [1, 2, 3],
-  "input_parties": [4, 5, 6],
+  "input_parties": [4, 5, 6, 7, 8, 9, 10],
   "preprocessing": false,
   "____COMMENT___": [
     "/*",
