--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
   "homepage": "https://github.com/emilyji/mpc-auction#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "flatted": "^3.1.1",
+    "mongodb": "^3.6.5",
+    "mongoose": "^5.12.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
