--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "flatted": "^3.1.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.3",
+    "nodemailer": "^6.5.0",
+    "nunjucks": "^3.2.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
