--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nunjucks": "^3.2.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "uuid": "^8.3.2"
   }
 }
