--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "flatted": "^3.1.1",
     "mongodb": "^3.6.5",
     "mongoose": "^5.12.3",
+    "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "nunjucks": "^3.2.3",
     "passport": "^0.4.1",
